--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.1.2
   url_launcher: ^6.2.4
+  firebase_core: ^2.25.4
+
 
 dev_dependencies:
   flutter_test:
