--- a/Assets/Apps/App.json
+++ b/Assets/Apps/App.json
@@ -1,24 +1,30 @@
 {
     "Apps":[
         {
-        "application" : "Chat App",
-        "Description":"",
-        "image" : "Assets/Images/chat.jpg"
+        "application" : "Notes Leloo",
+        "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
+        "image" : "Assets/Images/notes.jpg", 
+        "link" : "Assets/Apps/Notes Leloo.apk"
+    },
+    {
+        "application" : "E-Commerce App",
+        "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
+        "image" : "Assets/Images/Ecomerce.jpg", 
+        "link" :"Assets/Apps/Ecomerce.apk"
+    },
+    {
+        "application" : "Weather App",
+        "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
+        "image" : "Assets/Images/weather.jpg",
+        "link" :"Assets/Apps/Weather.apk"
+
     },
     {
         "application" : "Chat App",
-        "Description":"",
-        "image" : "Assets/Images/chat.jpg"
-    },
-    {
-        "application" : "Chat App",
-        "Description":"",
-        "image" : "Assets/Images/chat.jpg"
-    },
-    {
-        "application" : "Chat App",
-        "Description":"",
-        "image" : "Assets/Images/chat.jpg"
+        "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
+        "image" : "Assets/Images/chat.jpg", 
+        "link" :"Assets/Apps/Chatty.apk"
+
     }
 ]
 }
