--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/Images/
+    - Assets/CV/
     - Assets/Apps/
   #   - images/a_dot_ham.jpeg
 
