--- a/Assets/Apps/App.json
+++ b/Assets/Apps/App.json
@@ -4,27 +4,29 @@
         "application" : "Notes Leloo",
         "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
         "image" : "Assets/Images/notes.jpg", 
-        "link" : "Assets/Apps/Notes Leloo.apk"
+        "link" : "Assets/Apps/Notes Leloo.apk", 
+        "repo_link":"https://github.com/AbhishekHeer/Notes-Lelo"
     },
     {
         "application" : "E-Commerce App",
         "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
         "image" : "Assets/Images/Ecomerce.jpg", 
-        "link" :"Assets/Apps/Ecomerce.apk"
+        "link" :"Assets/Apps/Ecomerce.apk",
+        "repo_link":"https://github.com/AbhishekHeer/Chatty-Using-Firebase-As-Backend"
     },
     {
         "application" : "Weather App",
         "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
         "image" : "Assets/Images/weather.jpg",
-        "link" :"Assets/Apps/Weather.apk"
-
+        "link" :"Assets/Apps/Weather.apk",
+        "repo_link":"https://github.com/AbhishekHeer/Weather_App"
     },
     {
         "application" : "Chat App",
         "Description":"I created this project in order to show how to create an Chat Application in Android Phone using a Flutter",
         "image" : "Assets/Images/chat.jpg", 
-        "link" :"Assets/Apps/Chatty.apk"
-
+        "link" :"Assets/Apps/Chatty.apk",
+        "repo_link":"https://github.com/AbhishekHeer/Chatty-Using-Firebase-As-Backend"
     }
 ]
 }
