--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_database: ^10.4.5
   font_awesome_flutter: ^10.7.0
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
