--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/android
+/ios
+/macos
+/windows
+/linux
 
 # Symbolication related
 app.*.symbols
